--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/index.test.js --compilers js:babel-register",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --out-dir dist --ignore *.test.js src",
@@ -18,6 +18,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3",
     "npm-run-all": "^2.2.2",
     "rimraf": "^2.5.2",
     "webpack": "^1.13.1"
