--- a/package.json
+++ b/package.json
@@ -6,24 +6,18 @@
   "scripts": {
     "test": "mocha",
     "prebuild": "rimraf dist",
-    "build": "webpack --output-filename Validator.js",
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
     "prepublish": "npm test"
   },
   "author": "Rati Wannapanop <rati.wannapanop@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "rimraf": "^2.5.2",
-    "webpack": "^1.13.1"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "rollup-plugin-babel": "^2.6.1"
   }
 }
