--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "rimraf": "^2.5.2",
