--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "license": "MIT",
   "homepage": "https://github.com/ratiw/Validator#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.11.6",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3",
+    "mocha": "^3.2.0",
     "rimraf": "^2.5.2",
-    "rollup-plugin-babel": "^2.6.1",
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
     "rollup-watch": "^2.4.0"
   }
 }
