--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Validator",
+  "name": "validator",
   "version": "1.0.5",
   "description": "Client-side Javascript Validator library. Ports from Laravel 5.2",
   "main": "dist/Validator.js",
@@ -24,12 +24,12 @@
   "homepage": "https://github.com/ratiw/Validator#readme",
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.2",
-    "rollup": "^0.41.4",
+    "rollup": "^0.58.2",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-watch": "^2.4.0"
   }
