--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,13 +1,11 @@
 {
-  "presets": [
-  	[
-	  	"es2015",
-	  	{
-	  	  "modules": false
-	  	}
-  	]
-  ],
-  "plugins": [
-    "external-helpers"
-  ]
+    "presets": [
+        [
+            "es2015",
+            {
+                "modules": false
+            }
+        ]
+    ],
+    "plugins": ["external-helpers"]
 }
