--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Client-side Javascript Validator library. Ports from Laravel 5.2",
     "main": "dist/Validator.js",
     "scripts": {
-        "test": "npm run build && mocha",
+        "test": "npm run build && mocha --recursive --require @babel/register",
         "prebuild": "rimraf dist",
         "build": "rollup -c",
         "watch": "rollup -c -w",
@@ -23,14 +23,14 @@
     "license": "MIT",
     "homepage": "https://github.com/jfstn/Validator#readme",
     "devDependencies": {
-        "babel-plugin-external-helpers": "^6.22.0",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-register": "^6.11.6",
-        "chai": "^3.5.0",
+        "@babel/core": "^7.3.4",
+        "@babel/preset-env": "^7.3.4",
+        "@babel/register": "^7.0.0",
+        "chai": "^4.2.0",
         "mocha": "^6.0.2",
-        "rimraf": "^2.5.2",
-        "rollup": "^0.41.4",
-        "rollup-plugin-babel": "^2.7.1",
-        "rollup-watch": "^2.4.0"
+        "rimraf": "^2.6.3",
+        "rollup": "^1.6.0",
+        "rollup-plugin-babel": "^4.3.2",
+        "rollup-watch": "^4.3.1"
     }
 }
