--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "Validator",
     "version": "1.0.7",
-    "description": "Client-side Javascript Validator library. Ports from Laravel 5.2",
+    "description": "A client-side JavaScript validation package, based on Laravel 5.2 validation.",
     "main": "dist/Validator.js",
     "scripts": {
-        "test": "mocha --recursive --require @babel/register",
+        "test": "nyc --check-coverage --lines 85 mocha --require @babel/register",
+        "coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
         "prebuild": "rimraf dist",
         "build": "rollup -c",
         "watch": "rollup -c -w",
-        "prepublish": "npm run build && npm run test"
+        "prepublishOnly": "npm run build && npm run test"
     },
     "repository": {
         "type": "git",
@@ -27,10 +28,14 @@
         "@babel/preset-env": "^7.3.4",
         "@babel/register": "^7.0.0",
         "chai": "^4.2.0",
+        "coveralls": "^3.0.3",
         "mocha": "^6.0.2",
+        "nyc": "^13.3.0",
         "rimraf": "^2.6.3",
         "rollup": "^1.6.0",
         "rollup-plugin-babel": "^4.3.2",
+        "rollup-plugin-commonjs": "^9.2.1",
+        "rollup-plugin-node-resolve": "^4.0.1",
         "rollup-plugin-uglify": "^6.0.2",
         "rollup-watch": "^4.3.1"
     }
