--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
-    "printWidth": 100,
-    "semi": true,
     "singleQuote": true,
-    "tabWidth": 4,
-    "trailingComma": "none"
+    "tabWidth": 4
 }
