--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Validator",
-    "version": "1.0.9",
-    "description": "A client-side JavaScript validation package, based on Laravel 5.2 validation.",
+    "version": "1.1.0",
+    "description": "A JavaScript validation package, based on Laravel validation.",
     "main": "dist/Validator.js",
     "scripts": {
         "test": "nyc --check-coverage --lines 85 mocha --require @babel/register",
