--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
         "rollup-plugin-babel": "^4.3.2",
         "rollup-plugin-commonjs": "^9.2.1",
         "rollup-plugin-node-resolve": "^4.0.1",
-        "rollup-plugin-uglify": "^6.0.4",
-        "rollup-watch": "^4.3.1"
+        "rollup-plugin-uglify": "^6.0.4"
     }
 }
